Suppression des accents, ajout du code source dans le rapport, ajout de diagUML.png

--- a/Docs/Compte-rendu.tex
+++ b/Docs/Compte-rendu.tex
@@ -118,6 +118,39 @@ En résumé, il s'agissait d'un exercice enrichissant qui nous aura permis d'acq
  
 \section*{Annexe - Code source}
 
-%\lstinputlisting{../laFac.com/src/laFac/Contexte.java}
+\subsection*{Contexte}
+% Contexte
+\lstinputlisting{../laFac.com/src/laFac/Contexte.java}
+\lstinputlisting{../laFac.com/src/laFac/Alerte.java}
+% Panier
+\lstinputlisting{../laFac.com/src/laFac/Panier.java}
+
+\subsection*{Personnes}
+% Personnes
+\lstinputlisting{../laFac.com/src/laFac/Personne.java}
+\lstinputlisting{../laFac.com/src/laFac/NomStatut.java}
+\lstinputlisting{../laFac.com/src/laFac/Statut.java}
+\lstinputlisting{../laFac.com/src/laFac/Adherent.java}
+\lstinputlisting{../laFac.com/src/laFac/Employe.java}
+\lstinputlisting{../laFac.com/src/laFac/Visiteur.java}
+
+\subsection*{Produits}
+% Produits
+\lstinputlisting{../laFac.com/src/laFac/Produit.java}
+\lstinputlisting{../laFac.com/src/laFac/NomCategorie.java}
+\lstinputlisting{../laFac.com/src/laFac/Culture.java}
+\lstinputlisting{../laFac.com/src/laFac/Hightech.java}
+\lstinputlisting{../laFac.com/src/laFac/Livres.java}
+\lstinputlisting{../laFac.com/src/laFac/Spectacles.java}
+\lstinputlisting{../laFac.com/src/laFac/Tablette.java}
+
+\subsection*{Offres}
+%Offres
+\lstinputlisting{../laFac.com/src/laFac/Offre.java}
+\lstinputlisting{../laFac.com/src/laFac/OffreEmploye.java}
+\lstinputlisting{../laFac.com/src/laFac/OffreFidelite.java}
+\lstinputlisting{../laFac.com/src/laFac/OffreFlash.java}
+\lstinputlisting{../laFac.com/src/laFac/OffreProduit.java}
+
 
 \end{document}
