--- a/Docs/Compte-rendu.tex
+++ b/Docs/Compte-rendu.tex
@@ -2,6 +2,11 @@
 
 % Mise en page
 \usepackage[scale=0.75]{geometry}
+% Pied de page
+\usepackage{fancyhdr}
+\pagestyle{fancy}
+\renewcommand{\headrulewidth}{0pt}
+% Interligne après les paragraphes
 \setlength{\parskip}{1.5ex}
 
 % Langues
@@ -24,7 +29,8 @@
 \definecolor{gray}{rgb}{0.5,0.5,0.5}
 \definecolor{mauve}{rgb}{0.58,0,0.82}
 
-\lstset{frame=tb,
+\lstset{
+  frame=tb,
   language=Java,
   aboveskip=3mm,
   belowskip=3mm,
@@ -54,14 +60,17 @@
     {€}{{\euro{}}}1 {£}{{\pounds}}1
 }
 
-% Titre
-\title{LaFac.com}
-\author{BOSOM - CHAUSSY - DELLOUVE}
-\date{20 décembre 2013}
 
 \begin{document}
 
-\maketitle
+%\maketitle
+\input{page_de_garde.tex}
+
+%\clearpage
+
+\rhead{Conception Objet - LaFac.com}
+\lfoot{\includegraphics[scale=0.3]{polytech.jpg}}
+\rfoot{BOSOM - CHAUSSY - DELLOUVE}
 
 \vfill
 \section*{Introduction}
